# p-ssh

./: .gitignore  LICENSE  README.md  pyproject.toml  relnotes.txt
.vscode-ref/: settings.json
p_ssh/: __init__.py  log.py  p_batch.py  p_task.py
parallel_ssh/: __init__.py  log.py  p_batch.py  p_task.py
src/p_ssh/: __init__.py  common.py  p_batch.py  p_report.py  p_rsync.py  p_rsync_mkpath.py  p_ssh.py  p_task.py
src/p_ssh/commands/: p_report.py  p_rsync.py  p_rsync_mkpath.py  p_ssh.py
tests/: test_p_batch.py  test_p_task.py
tools/: build.sh  check_git_state.sh  check_python_ver.py  git_tag_with_semver.sh  py_format.sh  py_prerequisites.sh  pyproject.toml  requirements.txt  setup.cfg  update_readme.py
vscode/: settings.json  settings.json~
